--- a/home.html
+++ b/home.html
@@ -1,5 +1,11 @@
 <html>
 <body>
-<h1>ctrH</h1>
+<h1>ctrlH</h1>
+<br>
+<input type="text" name="UserInput">
+<input type="button" onclick="addfun()" value="Add">
+<p>This is your Todo So Far</p>
+<br>
 </body>
+<script src="adding.js"></script>
 </html>
