--- a/home.html
+++ b/home.html
@@ -2,10 +2,11 @@
 <body>
 <h1>ctrlH</h1>
 <br>
-<input type="text" name="UserInput">
-<input type="button" onclick="addfun()" value="Add">
+  <input type="text" id="UserInput">
+  <input type="button" onclick="addfun()" value="Add">
 <p>This is your Todo So Far</p>
-<br>
+    <ul id="myList">
+    </ul>
 </body>
-<script src="adding.js"></script>
+  <script src="adding.js"></script>
 </html>
