--- a/home.html
+++ b/home.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
 <body>
 <h1>ctrlH</h1>
 <br>
   <input type="text" id="UserInput">
   <input type="button" onclick="addfun()" value="Add">
-<p>This is your Todo So Far</p>
+  <p>This is your Todo So Far</p>
     <ul id="myList">
     </ul>
 </body>
