--- a/home.html
+++ b/home.html
@@ -1,5 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html charset=utf-8">
 <html>
+<head>
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+  <meta content="utf-8" http-equiv="encoding">
+</head>
 <body>
 <h1>ctrlH</h1>
 <br>
