--- a/public/home.html
+++ b/public/home.html
@@ -23,6 +23,23 @@
       <ul id="myList">
       </ul>
 </div>
+
+<script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBFh3kr3uTo9bcz0I9R6LPExYMJeC37QXg",
+    authDomain: "ctrlh-e7f8b.firebaseapp.com",
+    databaseURL: "https://ctrlh-e7f8b.firebaseio.com",
+    projectId: "ctrlh-e7f8b",
+    storageBucket: "ctrlh-e7f8b.appspot.com",
+    messagingSenderId: "983119323534"
+  };
+  firebase.initializeApp(config);
+</script>
+
 <script src="adding.js"></script>
+
 </body>
 </html>
