addin login page finished signup page

--- a/public/signup.html
+++ b/public/signup.html
@@ -5,10 +5,10 @@
     <title></title>
   </head>
   <body>
-      <h1>Login</h1>
+      <h1>Sign Up</h1>
       <input type="text" id="username"><br>
       <input type="text" id="password"><br>
-      <button type="button" name="Login" onclick="login()">Log in</button>
+      <button type="button" name="Signup" onclick="signup()">Sign Up</button>
       <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-app.js"></script>
 
       <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
@@ -25,6 +25,6 @@
         };
         firebase.initializeApp(config);
       </script>
-      <script src="login.js" charset="utf-8"></script>
+      <script src="signup.js" charset="utf-8"></script>
   </body>
 </html>
