--- a/public/home.html
+++ b/public/home.html
@@ -23,6 +23,7 @@
       <ul id="myList">
       </ul>
 </div>
+<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-app.js"></script>
 
 <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
