login page working properly

--- a/public/login.html
+++ b/public/login.html
@@ -9,6 +9,10 @@
       <input type="text" id="username"><br>
       <input type="text" id="password"><br>
       <button type="button" name="Login" onclick="login()">Log in</button>
+      <h1><p id="Errorinfo"></p></h1>
+      <br><br>
+      <h1>Or signup if you don't have account with us<h1><br>
+      <a href="signup.html">Sign Up</a>
       <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-app.js"></script>
 
       <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
