added css to signup page

--- a/public/signup.html
+++ b/public/signup.html
@@ -1,30 +1,145 @@
-</<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-      <h1>Sign Up</h1>
-      <input type="text" id="username"><br>
-      <input type="text" id="password"><br>
-      <button type="button" name="Signup" onclick="signup()">Sign Up</button>
-      <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-app.js"></script>
+<html>
+<head>
+  <title>Signup</title>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+<style>
+  .box {
+    width: 500px;
+    margin: 200px 0;
+}
 
-      <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
-      <script>
-        // Initialize Firebase
-        var config = {
-          apiKey: "AIzaSyBFh3kr3uTo9bcz0I9R6LPExYMJeC37QXg",
-          authDomain: "ctrlh-e7f8b.firebaseapp.com",
-          databaseURL: "https://ctrlh-e7f8b.firebaseio.com",
-          projectId: "ctrlh-e7f8b",
-          storageBucket: "ctrlh-e7f8b.appspot.com",
-          messagingSenderId: "983119323534"
-        };
-        firebase.initializeApp(config);
-      </script>
-      <script src="signup.js" charset="utf-8"></script>
-  </body>
+.shape1{
+    position: relative;
+    height: 150px;
+    width: 150px;
+    background-color: #0074d9;
+    border-radius: 80px;
+    float: left;
+    margin-right: -50px;
+}
+.shape2 {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    background-color: #0074d9;
+    border-radius: 80px;
+    margin-top: -30px;
+    float: left;
+}
+.shape3 {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    background-color: #0074d9;
+    border-radius: 80px;
+    margin-top: -30px;
+    float: left;
+    margin-left: -31px;
+}
+.shape4 {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    background-color: #0074d9;
+    border-radius: 80px;
+    margin-top: -25px;
+    float: left;
+    margin-left: -32px;
+}
+.shape5 {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    background-color: #0074d9;
+    border-radius: 80px;
+    float: left;
+    margin-right: -48px;
+    margin-left: -32px;
+    margin-top: -30px;
+}
+.shape6 {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    background-color: #0074d9;
+    border-radius: 80px;
+    float: left;
+    margin-right: -20px;
+    margin-top: -35px;
+}
+.shape7 {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    background-color: #0074d9;
+    border-radius: 80px;
+    float: left;
+    margin-right: -20px;
+    margin-top: -57px;
+}
+.float {
+    position: absolute;
+    z-index: 2;
+}
+
+.form {
+    margin-left: 159px;
+    margin-top: 46px;
+}
+  </style>
+</head>
+<body>
+  <centre><h1>Signup</h2>
+<div class="container">
+        <div id="login-row" class="row justify-content-center align-items-center">
+            <div id="login-column" class="col-md-6">
+                <div class="box">
+                    <div class="shape1"></div>
+                    <div class="shape2"></div>
+                    <div class="shape3"></div>
+                    <div class="shape4"></div>
+                    <div class="shape5"></div>
+                    <div class="shape6"></div>
+                    <div class="shape7"></div>
+                    <div class="float">
+                        <form class="form" action="">
+                            <div class="form-group">
+                                <label for="username" class="text-white">Username:</label><br>
+                                <input type="text" name="username" id="username" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="password" class="text-white">Password:</label><br>
+                                <input type="text" name="password" id="password" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <button type="button" name="Login" onclick="signup()" class="btn btn-info btn-md">Sign Up</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-app.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBFh3kr3uTo9bcz0I9R6LPExYMJeC37QXg",
+        authDomain: "ctrlh-e7f8b.firebaseapp.com",
+        databaseURL: "https://ctrlh-e7f8b.firebaseio.com",
+        projectId: "ctrlh-e7f8b",
+        storageBucket: "ctrlh-e7f8b.appspot.com",
+        messagingSenderId: "983119323534"
+      };
+      firebase.initializeApp(config);
+    </script>
+    <script src="signup.js" charset="utf-8"></script>
+</body>
 </html>
