--- a/public/home.html
+++ b/public/home.html
@@ -3,18 +3,17 @@
 <head>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
-
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <style>
   .todosection{
-    color : blue ;
-    float : right;
+    color : blue
   }
   </style>
 </head>
 
 <body>
-<div class="w3-card-4" >
-  <div class="w3-container w3-brown" style ="float : left">
+<div class="w3-card-4">
+  <div class="w3-container w3-brown">
     <h2>ctrl_H</h2>
   </div>
 
