--- a/public/new_home.html
+++ b/public/new_home.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
+<link href="https://fonts.googleapis.com/css?family=Mali|Poor+Story" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="new_home.css">
 </head>
@@ -15,10 +18,6 @@
 <ul id="myList">
   <li>Hit the gym</li>
   <li class="checked">Pay bills</li>
-  <li>Meet George</li>
-  <li>Buy eggs</li>
-  <li>Read a book</li>
-  <li>Organize office</li>
 </ul>
 <script src="new_home.js"></script>
 
