--- a/public/new_home.html
+++ b/public/new_home.html
@@ -15,10 +15,7 @@
   <span onclick="addfun()" class="addBtn">Add</span>
 </div>
 
-<ul id="myList">
-  <li>Hit the gym</li>
-  <li class="checked">Pay bills</li>
-</ul>
+<ul id="myList"></ul>
 <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-app.js"></script>
 
 <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
