--- a/public/new_home.html
+++ b/public/new_home.html
@@ -6,6 +6,11 @@
 <link href="https://fonts.googleapis.com/css?family=Mali|Poor+Story" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="new_home.css">
+<style>
+body{
+background-image: url("backg.jpg");
+}
+</style>
 </head>
 <body>
 
