added meta color tag to all pages

--- a/public/new_home.html
+++ b/public/new_home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta name="theme-color" content="#3333cc">
 <meta content="utf-8" http-equiv="encoding">
 <link href="https://fonts.googleapis.com/css?family=Mali|Poor+Story" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
